# trend-lab-agent-skill-search-kit-260707

./: README.md  pyproject.toml
src/agent_skill_search_kit/: main.py
tests/: test_smoke.py
